--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+html{
+  min-height: 100%;
+}
 body {
   margin: 0;
+  background: url(/img/water.jpg) ;
+  background-size: 100%;
+  min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +16,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+form{
+  padding : 20px;
+  margin-top: 100px;
+}
+
+form button, form h5{
+  margin : 20px 0;
 }
